test/runnable/extra-files/lib14555.d
module lib14555;

shared static this() {} // needs ModuleInfo
class A {}
class B {}
