test/fail_compilation/fail4245d.d
// 4245
void fail4245()
{
    {
        class Foo {}
    }
    {
        class Foo {}
    }
}
